# fw-ghostStats

./: .gitignore  Dockerfile  LICENSE  README.md  build_docker.sh  demo.ipynb  dev_funs.ipynb  interactive-run.sh  make_doc.py  manifest.json  optimal_analysis.py  phantom_characteristics.ipynb  pyproject.toml  requirements.txt  run.py  setup.py
.github/: keepalive.txt
.github/workflows/: run_ghost.yml  run_ghostStats.yml
DailyQA/code/: ghost_config.json  run_dcm2bids.sh  temp_json.py
data/: phantoms.json
dcm2bids/: DailyQA_config.json  run_dcm2bids.sh
doc/: Commands.rst  ML.rst  Phantom.rst  bids.rst  changelog.md  conf.py  gearDev.md  index.rst
examples/: demo.ipynb  phantom_characteristics.ipynb
examples/UNITY_QA_Example/: README.md
examples/UNITY_QA_Example/single/: single_demo.ipynb
examples/old_unity_QA/: README.md  plotting.ipynb
examples/unity_QA/: README.md  describe_fid_seg.ipynb
examples/unity_QA/basic_api/: single_demo.ipynb
examples/unity_QA/bids/: bids_demo.ipynb  demo.ipynb
experiments/: noise_metrics.ipynb
ghost/: __init__.py  apps.py  bids.py  calib.py  cmd.py  dataio.py  download_data.py  main_ghost.py  math.py  metrics.py  misc.py  ml.py  old.py  phantom.py  phantom_scripts.py  plot.py  reg.py  sim.py  slice_thickness.py  stats.py  utils.py  web.py
ghost-0.0.1-67224e959e29a528937f2d8f/: .input_map.json  config.json  manifest.json
nnUnet_models/: models.json
sandbox/brainweb_sim/: contrast_sim.ipynb  download_brainweb_data.ipynb
utils/: batch-run.py  bids_data_setup.py  parser.py
